# snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  startup.bat
header/: food.h  game.h  glob.h  node.h  snake.h  win.h
headers/: glob.h  snake.h
include/: game.h  snake.h  util.h
src/: controller.cpp  draw.cpp  food.cpp  game.cpp  glob.cpp  load_music.cpp  main.cpp  snake.cpp  win.cpp
test/: main.cpp
